tests/NormalTests/paczka2/big_fuzzy/23125540.err
Error in line 9: Stu A335 26,4
Error in line 10: Stu S904 54,0
Error in line 20: s5TW21 S904 51,0
Error in line 11: QC4 A335 17,4
Error in line 31: Stu A404 85,9
Error in line 30: s5TW21 A404 73,9
Error in line 34: A335 S948 1,5
Error in line 32: Stu S904 57,4
Error in line 36: A335 S904 40,1
Error in line 49: s5TW21 S904 4,1
Error in line 59: Stu A404 29,
Error in line 56: Stu S904 33,2
Error in line 58: A335 A335 24,2
Error in line 55: sRMmMlrdd S948 345,9
Error in line 65: QC4 A335 13,5
Error in line 73: QC4 S9b4 194,7
Error in line 75: sRMmMlrdd A/0/ 283,7
Error in line 81: sRMmMlrdd A404 11,5
Error in line 72: QC4 S904 86,9
Error in line 108: QC4 S904 249,6
Error in line 124: A335 A335 44,2
Error in line 128: Stu S904 47,9
Error in line 134: sRMmMlrdd S948 69,0
Error in line 140: s5TW21 S904 96,3
Error in line 144: QC4 S904 56,7
Error in line 150: QC4 S948 28,8
Error in line 154: Rsc6d5 S904 99,1
Error in line 159: Rsc6d5 A335 5,2
Error in line 141: sRMmMlrdd A404 125,6
Error in line 148: NoNL0Cmm A404 99,0
Error in line 184: Rsc6d5 A404 93,67
Error in line 183: Rsc6d5 S904 19,4
Error in line 186: Rsc6d5 A404 271,7
Error in line 172: NoNL0Cmm S904 124,1
Error in line 199: NoNL0Cmm A335 62,56
Error in line 196: Stu A404 71,2
Error in line 211: Stu A335 13,8
Error in line 212: Stu A404 48,8
Error in line 209: QC4 A404 83,2
Error in line 233: s5TW21 S904 34,1
Error in line 245: A335 S9[8 75,6
Error in line 237: A335 S904 59,7
